objects/Liability__c.object
<CustomObject>
    <description>To track financial liabilities associated with client cases.</description>
    <fields>
        <fullName>AccountBalance__c</fullName>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>ClientCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Liabilities</relationshipLabel>
        <relationshipName>Liabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Liabilities</relationshipLabel>
        <relationshipName>Liabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DontUseinComputations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t Use in Computations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiabilitiesType__c</fullName>
        <label>Liabilities Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automobile Loan</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Judgement</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Lien</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Student Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MinimumMonthlyPayment__c</fullName>
        <label>Minimum Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VictimofPredatoryLending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Victim of Predatory Lending</label>
        <type>Checkbox</type>
    </fields>
    <label>Liability</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Liability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>